# covid_safe

./: CMakeLists.txt  model.tflite
include/: bounding_box.h  box_utils.h  lite.h  uvc.h  uvc_com.h
src/: bounding_box.cpp  box_utils.cpp  lite.cpp  main.cpp  uvc.cpp  uvc_com.cpp
